# irtt-rs

./: .gitignore  Cargo.toml  README.md  deny.toml  dist-workspace.toml  renovate.json
.github/workflows/: actions-security.yml  build_and_test.yml  ci.yml  interop-netem.yml  osv-scanner.yml  release.yml  rust-clippy.yml  semver.yml  supply-chain.yml  zizmor.yml
captures/: basic-session.pcapng  dscp-46.pcapng  dscp-session.pcapng  dscp-values.pcapng  full-session.pcapng  hmac-session.pcapng  large-packet.pcapng  long-sfill.pcapng  no-test.pcapng  tstamp-none.pcapng
crates/irtt-cli/: Cargo.toml
crates/irtt-cli/src/: applet.rs  entry.rs  lib.rs  main.rs  signal.rs  summary.rs  tui.rs
crates/irtt-cli/src/cmd/: mod.rs
crates/irtt-cli/src/cmd/client/: args.rs  mod.rs  output.rs  run.rs  summary.rs
crates/irtt-cli/src/cmd/tui/: args.rs  mod.rs  run.rs  ui.rs
crates/irtt-cli/src/shared/: mod.rs
crates/irtt-cli/src/shared/client/: args.rs  config.rs  mod.rs  session.rs  targets.rs
crates/irtt-cli/tests/: applet_dispatch.rs  client_multi_target.rs
crates/irtt-client/: Cargo.toml
crates/irtt-client/src/: client.rs  config.rs  error.rs  event.rs  lib.rs  metadata.rs  probe.rs  receive.rs  runtime.rs  session.rs  socket.rs  socket_options.rs  timing.rs
crates/irtt-client/src/client/tests/: close.rs  config.rs  config_open.rs  dscp.rs  hmac.rs  mod.rs  negotiation.rs  no_test.rs  open.rs  probes_replies.rs  sequence.rs  support.rs  ttl.rs
crates/irtt-client/src/client/tests/probes_replies/: burst_recv.rs  mod.rs  packet_length.rs  probe_schedule.rs  reply_classification.rs  reply_decode.rs  reply_metadata.rs  timeouts.rs  timing_math.rs
crates/irtt-client/src/managed/: cancellation.rs  group.rs  hub.rs  mod.rs  runner.rs
crates/irtt-client/src/receive/: linux.rs
crates/irtt-client/tests/: hmac.rs  large_packets.rs  m8_compat.rs  protocol_options.rs  server_fill.rs
crates/irtt-client/tests/protocol_options/: backend_smoke.rs
crates/irtt-client/tests/support/: mod.rs  real_irtt.rs
crates/irtt-proto/: Cargo.toml
crates/irtt-proto/src/: close.rs  echo.rs  error.rs  flags.rs  hmac.rs  layout.rs  lib.rs  open.rs  params.rs  varint.rs
crates/irtt-proto/tests/: vectors.rs
crates/irtt-stats/: Cargo.toml
crates/irtt-stats/src/: core.rs  ipdv.rs  lib.rs  loss.rs  normalization.rs  rolling.rs  time_stats.rs
crates/irtt-stats/tests/: stats.rs
crates/irtt-stats/tests/common/: mod.rs
docs/: BLACKBOX_VERIFICATION_REPORT.md  CLEANROOM_NOTES.md  IMPLEMENTATION_PLAN.md  INTEROP_COMPARISON.md  IRTT_CLIENT_PROTOCOL_SPEC.md  IRTT_STATS_SEMANTICS.md  RUST_DESIGN.md  test-vectors.md
scripts/: compare_irtt_clients.py  run_netem_interop_ci.py
