[workspace]
members = [
    "crates/irtt-proto",
    "crates/irtt-client",
    "crates/irtt-stats",
    "crates/irtt-cli",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "Apache-2.0"
rust-version = "1.85"
repository = "https://github.com/Lochnair/irtt-rs"
homepage = "https://github.com/Lochnair/irtt-rs"
readme = "README.md"

[workspace.dependencies]
irtt-proto = { version = "0.4.0", path = "crates/irtt-proto" }
irtt-client = { version = "0.4.0", path = "crates/irtt-client" }
irtt-stats = { version = "0.4.0", path = "crates/irtt-stats" }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = "symbols"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
