[package]
name = "irtt-cli"
version = "0.1.1"
description = "Command-line IRTT-compatible client"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords = ["irtt", "networking", "latency", "rtt"]
categories = ["command-line-utilities", "network-programming"]

[features]
default = ["stats"]
stats = ["dep:irtt-stats"]

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
ctrlc = "3.5.2"
irtt-client.workspace = true
irtt-proto.workspace = true
irtt-stats = { workspace = true, optional = true }
