[package]
name = "irtt-cli"
version = "0.2.0"
description = "Command-line IRTT-compatible client"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords = ["irtt", "networking", "latency", "rtt"]
categories = ["command-line-utilities", "network-programming"]

[lib]
doc = false

[features]
default = ["stats"]
stats = ["dep:irtt-stats"]
tui = ["stats", "dep:ratatui", "dep:crossterm"]

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
crossterm = { version = "0.28.1", optional = true }
ctrlc = "3.5.2"
irtt-client.workspace = true
irtt-proto.workspace = true
irtt-stats = { workspace = true, optional = true }
ratatui = { version = "0.29.0", optional = true }
