[package]
name = "irtt-cli"
version = "0.3.0"
description = "Command-line IRTT-compatible client"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords = ["irtt", "networking", "latency", "rtt"]
categories = ["command-line-utilities", "network-programming"]

[lib]
doc = false

[[bin]]
name = "irtt-rs"
path = "src/main.rs"

[[bin]]
name = "irtt-cli"
path = "src/main.rs"
required-features = ["client"]

[[bin]]
name = "irtt-tui"
path = "src/main.rs"
required-features = ["tui"]

[features]
default = ["client", "stats"]
client-runtime = ["dep:irtt-client", "dep:irtt-proto"]
client = ["client-runtime"]
stats = ["client-runtime", "dep:irtt-stats"]
tui = ["client-runtime", "stats", "dep:ratatui", "dep:crossterm"]
full = ["client", "stats", "tui"]

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
crossterm = { version = "0.28.1", optional = true }
ctrlc = "3.5.2"
irtt-client = { workspace = true, optional = true }
irtt-proto = { workspace = true, optional = true }
irtt-stats = { workspace = true, optional = true }
ratatui = { version = "0.30.1", optional = true }
