[package]
name = "irtt-client"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
irtt-proto.workspace = true
libc = { version = "0.2", optional = true }
socket2 = { version = "0.5", features = ["all"] }
thiserror = "2"

[features]
default = []
ancillary = ["dep:libc"]
