[package]
name = "irtt-client"
version = "0.3.0"
description = "IRTT-compatible Rust client library"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords = ["irtt", "networking", "latency", "rtt"]
categories = ["network-programming"]

[dependencies]
irtt-proto.workspace = true
libc = { version = "0.2.186", optional = true }
socket2 = { version = "0.6.4", features = ["all"] }
thiserror = "2.0.18"

[features]
default = []
ancillary = ["dep:libc"]

[package.metadata.docs.rs]
all-features = true
