[package]
name = "irtt-proto"
version = "0.1.0"
description = "IRTT protocol encoding and decoding primitives"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords = ["irtt", "networking", "latency", "protocol"]
categories = ["network-programming"]

[dependencies]
hmac = "0.13.0"
md-5 = "0.11.0"
subtle = "2"
thiserror = "2"
