[package]
name = "irtt-proto"
version = "0.3.0"
description = "IRTT protocol encoding and decoding primitives"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords = ["irtt", "networking", "latency", "protocol"]
categories = ["network-programming"]

[dependencies]
hmac = "0.13"
md-5 = "0.11"
subtle = "2.6.1"
thiserror = "2.0.18"
